xmobar/xmobar-dual.errors

xmobar-dual.hs:68:48: error:
    lexical error in string/character literal at character '\61480'
   |
68 |         Run Volume "default" "Master" [ "-t", ":<volume>%" -- " <status>" -- mute status
   |                                                ^
